Fixed <pre> and <code> background overlap

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -255,7 +255,7 @@ article {
   article {
     a { color: #8085C1; }
 
-    pre, code {
+    pre, p code {
       background: #FAFAFA;
       border: 0.1rem solid #EEE;
       border-radius: 0.4rem;
